--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -70,3 +70,70 @@ h3 {
 .w3- {
 
 }
+
+
+
+.container {
+	background-color: #009688;
+	 height:auto;
+    width: 500px;
+	 
+}
+
+.container-inner {
+  margin: 20px;
+}
+
+.title {	
+	display: flex; 
+	height: 50px;	 
+	align-items: center;
+	font-size: 1.8em;
+	padding: 10px;
+	background-color: #004D40;
+	color: #fff;
+	 
+}
+
+.logo {
+	height: 30px;
+	padding-right: 10px;
+}
+.separator {
+ margin: 10px;
+ padding:10px ;
+  
+}
+
+
+.inputField{
+	padding:8px 0 ;
+	margin-bottom: 8px;	
+	font-size: 1em;
+	width: 100%;
+	
+}
+
+.selectField {
+	width: 100%;	 
+ padding:8px ;
+}
+
+.txtLabel{
+	font-size: 1.2em;
+	font-weight: bold;
+	display: block;
+	 
+}
+
+.btn-submit {
+	padding:10px ;
+	 
+}
+
+.action {
+	display: flex;
+	justify-content: space-between;
+}.cancel {
+
+}
