Avatar issue fixed. Logo is being displayed. W3 schools framework applied. Pull request changes made.

--- a/src/main/java/com/techmine/gs/ui/pages/loginpage/LoginPage.css
+++ b/src/main/java/com/techmine/gs/ui/pages/loginpage/LoginPage.css
@@ -40,11 +40,12 @@ form {
 }
 
 
-/* Login Avatar alignment*/ 
+/* Login Avatar alignment 
 .imgcontainer{
     text-align: center;
     margin: 48px 0 24px 0;
 }
+*/
 
 .Avatar{
     width: 150px;
