--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,10 +1,14 @@
 body, p, li, a { font-family: georgia, times, serif;font-size:13pt;}
 h1, h2, h3 { font-family: 'Yanone Kaffeesatz', arial, serif; }
-body { margin:auto ;padding:0; }
+body {
+    margin:auto ;
+    padding:0;
+    width : 100%;
+    height :100%;
+}
 #hd {
-	width : 100%;
-	height : 87px;
-	background-color : #092E67;
+
+    background-color : #092E67;
 	margin-top : 0;
 	padding-top : 10px;
 	border-bottom : 1px solid #888;
