--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserView.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserView.html
@@ -23,7 +23,8 @@ limitations under the License.
     </head>
     <body>
         <wicket:panel>
-            <div>User View works</div>
+            <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">User Manager</header>
+            <div wicket:id="editor">User View works</div>
         </wicket:panel>
     </body>
 </html>
