--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
@@ -23,50 +23,52 @@ limitations under the License.
     </head>
     <body>
         <wicket:panel>
-            <div class="w3-container">
-                <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Editor</header>
-                <section>
-                    <div>
-                        <input id="userName" class="w3-input w3-transparent" type="text"/>
-                        <label for="userName">User Name</label>
-                    </div>
-                    <div>
-                        <input id="password" class="w3-input w3-transparent" type="password"/>
-                        <label for="password">Password</label>
-                    </div>
-                    <div>
-                        <input id="firstName" class="w3-input w3-transparent" type="text"/>
-                        <label for="firstName">First Name</label>
-                    </div>
-                    <div>
-                        <input id="familyName" class="w3-input w3-transparent" type="text"/>
-                        <label for="familyName">Family Name</label>
-                    </div>
-                    <div>
-                        <input id="otherName" class="w3-input w3-transparent" type="text"/>
-                        <label for="otherName">Other Name</label>
-                    </div>
-                    <div>
-                        <input id="email" class="w3-input w3-transparent" type="tel"/>
-                        <label for="email">Email</label>
-                    </div>
-                    <div>
-                        <input id="telephone1" class="w3-input w3-transparent"/>
-                        <label for="telephone1" type="tel">Telephone 1</label>
-                    </div>
-                    <div>
-                        <input id="telephone2" class="w3-input w3-transparent" type="tel"/>
-                        <label for="telephone2">Telephone 1</label>
-                    </div>
-                </section>
-                <footer>
-                    <div class="w3-bar">
-                        <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">Save</button>
-                        <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">Cancel</button>
-                        <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">New</button>
-                    </div>
-                </footer>
-            </div>
+            <form wicket:id="editForm">
+                <div class="w3-container">
+                    <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Editor</header>
+                    <section>
+                        <div>
+                            <input id="userName" class="w3-input w3-transparent" type="text"/>
+                            <label for="userName">User Name</label>
+                        </div>
+                        <div>
+                            <input id="password" class="w3-input w3-transparent" type="password"/>
+                            <label for="password">Password</label>
+                        </div>
+                        <div>
+                            <input id="firstName" class="w3-input w3-transparent" type="text"/>
+                            <label for="firstName">First Name</label>
+                        </div>
+                        <div>
+                            <input id="familyName" class="w3-input w3-transparent" type="text"/>
+                            <label for="familyName">Family Name</label>
+                        </div>
+                        <div>
+                            <input id="otherName" class="w3-input w3-transparent" type="text"/>
+                            <label for="otherName">Other Name</label>
+                        </div>
+                        <div>
+                            <input id="email" class="w3-input w3-transparent" type="tel"/>
+                            <label for="email">Email</label>
+                        </div>
+                        <div>
+                            <input id="telephone1" class="w3-input w3-transparent"/>
+                            <label for="telephone1" type="tel">Telephone 1</label>
+                        </div>
+                        <div>
+                            <input id="telephone2" class="w3-input w3-transparent" type="tel"/>
+                            <label for="telephone2">Telephone 1</label>
+                        </div>
+                    </section>
+                    <footer>
+                        <div class="w3-bar">
+                            <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">Save</button>
+                            <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">Cancel</button>
+                            <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">New</button>
+                        </div>
+                    </footer>
+                </div>
+            </form>
         </wicket:panel>
     </body>
 </html>
