--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
@@ -28,43 +28,43 @@ limitations under the License.
                     <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Editor</header>
                     <section>
                         <div>
-                            <input id="userName" class="w3-input w3-transparent" type="text"/>
+                            <input wicket:id="userName" class="w3-input w3-transparent" type="text"/>
                             <label for="userName">User Name</label>
                         </div>
                         <div>
-                            <input id="password" class="w3-input w3-transparent" type="password"/>
+                            <input wicket:id="password" class="w3-input w3-transparent" type="password"/>
                             <label for="password">Password</label>
                         </div>
                         <div>
-                            <input id="firstName" class="w3-input w3-transparent" type="text"/>
+                            <input wicket:id="firstName" class="w3-input w3-transparent" type="text"/>
                             <label for="firstName">First Name</label>
                         </div>
                         <div>
-                            <input id="familyName" class="w3-input w3-transparent" type="text"/>
+                            <input wicket:id="familyName" class="w3-input w3-transparent" type="text"/>
                             <label for="familyName">Family Name</label>
                         </div>
                         <div>
-                            <input id="otherName" class="w3-input w3-transparent" type="text"/>
+                            <input wicket:id="otherName" class="w3-input w3-transparent" type="text"/>
                             <label for="otherName">Other Name</label>
                         </div>
                         <div>
-                            <input id="email" class="w3-input w3-transparent" type="tel"/>
+                            <input wicket:id="email" class="w3-input w3-transparent" type="email"/>
                             <label for="email">Email</label>
                         </div>
                         <div>
-                            <input id="telephone1" class="w3-input w3-transparent"/>
-                            <label for="telephone1" type="tel">Telephone 1</label>
+                            <input wicket:id="telephone1" class="w3-input w3-transparent" type="text"/>
+                            <label for="telephone1">Telephone 1</label>
                         </div>
                         <div>
-                            <input id="telephone2" class="w3-input w3-transparent" type="tel"/>
+                            <input wicket:id="telephone2" class="w3-input w3-transparent" type="text"/>
                             <label for="telephone2">Telephone 1</label>
                         </div>
                     </section>
                     <footer>
                         <div class="w3-bar">
-                            <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">Save</button>
-                            <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">Cancel</button>
-                            <button class="w3-button w3-bar-item w3-mobile w3-hover-orange">New</button>
+                            <button wicket:id="save" class="w3-button w3-bar-item w3-mobile w3-hover-orange">Save</button>
+                            <button wicket:id="cancel" class="w3-button w3-bar-item w3-mobile w3-hover-orange">Cancel</button>
+                            <button wicket:id="new" class="w3-button w3-bar-item w3-mobile w3-hover-orange">New</button>
                         </div>
                     </footer>
                 </div>
