Added Style to make all input fields a max-width of 200px

--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
@@ -28,7 +28,7 @@ limitations under the License.
                     <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Editor</header>
                     <section>
                         <div>
-                            <input wicket:id="userName" class="w3-input w3-transparent" type="text"/>
+                            <input wicket:id="userName" class="w3-input w3-transparent" type="text"  required="true"/>
                             <label for="userName">User Name</label>
                         </div>
                         <div>
