--- a/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerEditor.html
@@ -14,14 +14,16 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
         <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-  <form wicket:id="form" class="w3-display-topmiddle">
+        <wicket:panel>
+
+            <form wicket:id="form" class="w3-display-topmiddle">
                 <header>
                     <h2>Owner Information</h2>
                 </header>
@@ -83,6 +85,6 @@ limitations under the License.
                     </footer>
                 </div>
             </form>
-
+        </wicket:panel>
     </body>
 </html>
