Expected MVP Behavior for User Editor UI Complete

--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
@@ -23,7 +23,7 @@ limitations under the License.
     <body>
         <wicket:panel>
             <form wicket:id="editForm">
-                <div class="w3-container">
+                <div class="w3-container w3-card">
                     <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Editor</header>
                     <section>
                         <div>
@@ -59,11 +59,11 @@ limitations under the License.
                             <label for="telephone2">Telephone 1</label>
                         </div>
                     </section>
-                    <footer>
-                        <div class="w3-bar">
-                            <button wicket:id="save" class="w3-button w3-bar-item w3-mobile w3-hover-orange">Save</button>
-                            <button wicket:id="cancel" class="w3-button w3-bar-item w3-mobile w3-hover-orange">Cancel</button>
-                            <button wicket:id="new" class="w3-button w3-bar-item w3-mobile w3-hover-orange">New</button>
+                    <footer class="w3-panel w3-stretch w3-center">
+                        <div>
+                            <button wicket:id="save" class="w3-button  w3-mobile w3-hover-orange">Save</button>
+                            <button wicket:id="cancel" class="w3-button  w3-mobile w3-hover-orange">Cancel</button>
+                            <button wicket:id="new" class="w3-button  w3-mobile w3-hover-orange">New</button>
                         </div>
                     </footer>
                 </div>
