--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserView.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserView.html
@@ -28,7 +28,7 @@ limitations under the License.
 
             <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">User Manager</header>
             <div class="w3-container w3-row">
-                <div class="w3-third w3-mobile w3-blue">
+                <div class="w3-third w3-mobile">
                     <div wicket:id="editor">Editor</div>
                 </div>
                 <div class="w3-twothird w3-mobile w3-gray">Search</div>
