--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
@@ -25,27 +25,34 @@ limitations under the License.
             <form wicket:id="editForm">
                 <div class="w3-container w3-card">
                     <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Editor</header>
-                    <section>
-                        <div>
-                            <input wicket:id="userName" class="w3-input w3-transparent" type="text"  required="true"/>
-                            <label for="userName">User Name</label>
-                        </div>
+                    <section class="w3-container w3-padding-top-24">
+
+                        <div wicket:id="userName" type="text"></div>
                         <div>
                             <input wicket:id="password" class="w3-input w3-transparent" type="password"/>
                             <label for="password">Password</label>
                         </div>
-                        <div>
+                        <div wicket:id="firstName" type="text" ></div>
+                        <div wicket:id="familyName" type="text" ></div>
+                        <div wicket:id="otherName" type="text" ></div>
+
+
+                        <!--div>
+                            <input  wicket:id="userName" class="w3-input w3-transparent" type="text"  required/>
+                            <label for="userName">User Name</label>
+                      
+                        <!--div>
                             <input wicket:id="firstName" class="w3-input w3-transparent" type="text"/>
                             <label for="firstName">First Name</label>
-                        </div>
-                        <div>
+                        </div-->
+                        <!--div>
                             <input wicket:id="familyName" class="w3-input w3-transparent" type="text"/>
                             <label for="familyName">Family Name</label>
-                        </div>
-                        <div>
+                        </div-->
+                        <!--div>
                             <input wicket:id="otherName" class="w3-input w3-transparent" type="text"/>
                             <label for="otherName">Other Name</label>
-                        </div>
+                        </div-->
                         <div>
                             <input wicket:id="email" class="w3-input w3-transparent" type="email"/>
                             <label for="email">Email</label>
