User Editor now displays and verifies required fields.   Does not persists yet. nor cancel or new.

--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
@@ -27,20 +27,20 @@ limitations under the License.
                     <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Editor</header>
                     <section class="w3-container w3-padding-top-24">
 
-                        <div wicket:id="userName" type="text"></div>
-                        <div>
-                            <input wicket:id="password" class="w3-input w3-transparent" type="password"/>
-                            <label for="password">Password</label>
-                        </div>
-                        <div wicket:id="firstName" type="text" ></div>
-                        <div wicket:id="familyName" type="text" ></div>
-                        <div wicket:id="otherName" type="text" ></div>
+                        <div wicket:id="userName" ></div>
 
+                        <div wicket:id="password"  ></div>
+                        <div wicket:id="firstName" ></div>
+                        <div wicket:id="familyName"></div>
+                        <div wicket:id="otherName" ></div>
+                        <div wicket:id="telephone1"></div>
+                        <div wicket:id="telephone2"></div>
+                        <div wicket:id="email"></div>
 
                         <!--div>
                             <input  wicket:id="userName" class="w3-input w3-transparent" type="text"  required/>
                             <label for="userName">User Name</label>
-                      
+
                         <!--div>
                             <input wicket:id="firstName" class="w3-input w3-transparent" type="text"/>
                             <label for="firstName">First Name</label>
@@ -53,18 +53,18 @@ limitations under the License.
                             <input wicket:id="otherName" class="w3-input w3-transparent" type="text"/>
                             <label for="otherName">Other Name</label>
                         </div-->
-                        <div>
+                        <!--div>
                             <input wicket:id="email" class="w3-input w3-transparent" type="email"/>
                             <label for="email">Email</label>
-                        </div>
-                        <div>
+                        </div-->
+                        <!--div>
                             <input wicket:id="telephone1" class="w3-input w3-transparent" type="text"/>
                             <label for="telephone1">Telephone 1</label>
-                        </div>
-                        <div>
-                            <input wicket:id="telephone2" class="w3-input w3-transparent" type="text"/>
-                            <label for="telephone2">Telephone 1</label>
-                        </div>
+                        </div-->
+                        <!--div>
+                        <input wicket:id="telephone2" class="w3-input w3-transparent" type="text"/>
+                        <label for="telephone2">Telephone 1</label>
+                        </div-->
                     </section>
                     <footer class="w3-panel w3-stretch w3-center">
                         <div>
