added wicket:id="dataTable" for reference by DataTable component.

--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserSearch.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserSearch.html
@@ -22,7 +22,7 @@ limitations under the License.
     </head>
     <body>
         <wicket:panel>
-            <div id:="datatable">[datatable]</div>
+            <div wicket:id="dataTable">[Data Table]</div>
         </wicket:panel>
     </body>
 </html>
