extensions - datatable present needs to style.  Can not inject  UserService into the DataProvider

--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserView.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserView.html
@@ -31,7 +31,9 @@ limitations under the License.
                 <div class="w3-third w3-mobile">
                     <div wicket:id="editor">Editor</div>
                 </div>
-                <div class="w3-twothird w3-mobile w3-gray">Search</div>
+                <div class="w3-twothird w3-mobile w3-gray">
+                    <div wicket:id="searcher"></div>
+                </div>
             </div>
 
         </wicket:panel>
