--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserSearch.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserSearch.html
@@ -14,13 +14,17 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<html>
+<html  xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
         <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-        <div>TODO write content</div>
+        <wicket:panel>
+            <div>
+                <table wicket:id="resultTable"></table>
+            </div>
+        </wicket:panel>
     </body>
 </html>
