Implemented Search on UserManager

--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserSearch.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserSearch.html
@@ -14,7 +14,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<html  xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
@@ -22,9 +22,22 @@ limitations under the License.
     </head>
     <body>
         <wicket:panel>
-            <div>
-                <table wicket:id="resultTable"></table>
-            </div>
+            <form wicket:id="searchForm">
+                <fieldset>
+                    <legend>Search Criteria</legend>
+                    <div class="">
+                        <div class=" w3-mobile">
+                            <input class="search-criteria" wicket:id="criteria"/>
+                        </div>
+                        <div class=" w3-mobile">
+                            <button wicket:id="search" class="w3-hover-theme w3-button w3-block">Search</button>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+            <table class="w3-table w3-striped" wicket:id="resultTable"></table>
+
+
         </wicket:panel>
     </body>
 </html>
