--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserView.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserView.html
@@ -20,7 +20,7 @@ limitations under the License.
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
+
 
     </head>
     <body>
@@ -31,7 +31,7 @@ limitations under the License.
                 <div class="w3-third w3-mobile">
                     <div wicket:id="editor">Editor</div>
                 </div>
-                <div class="w3-twothird w3-mobile w3-gray">
+                <div class="w3-twothird w3-mobile">
                     <div wicket:id="searcher"></div>
                 </div>
             </div>
