--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
@@ -22,7 +22,9 @@ limitations under the License.
     </head>
     <body>
         <wicket:panel>
+            <div wicket:id="formErrors"></div>
             <form wicket:id="editForm">
+
                 <div class="w3-container w3-card">
                     <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Editor</header>
                     <section class="w3-container w3-padding-top-24">
