nothing changed really

--- a/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerEditor.html
@@ -47,7 +47,7 @@ limitations under the License.
                     </div>
                     <div class="w3-margin-16">
                         <label>Country</label><br/>
-                        <input wicket:id="country" class="w3-input" type="text"/>
+                        <select wicket:id="country"></select>
                     </div>
                     <div class="w3-margin-16">
                         <label>Telephone 1</label><br/>
