Removed commented out code Signed-off-by:pembertonc <cedric.pemberton@gmail.com>

--- a/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/userView/UserEditor.html
@@ -14,7 +14,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
@@ -36,35 +36,6 @@ limitations under the License.
                         <div wicket:id="telephone1"></div>
                         <div wicket:id="telephone2"></div>
                         <div wicket:id="email"></div>
-
-                        <!--div>
-                            <input  wicket:id="userName" class="w3-input w3-transparent" type="text"  required/>
-                            <label for="userName">User Name</label>
-
-                        <!--div>
-                            <input wicket:id="firstName" class="w3-input w3-transparent" type="text"/>
-                            <label for="firstName">First Name</label>
-                        </div-->
-                        <!--div>
-                            <input wicket:id="familyName" class="w3-input w3-transparent" type="text"/>
-                            <label for="familyName">Family Name</label>
-                        </div-->
-                        <!--div>
-                            <input wicket:id="otherName" class="w3-input w3-transparent" type="text"/>
-                            <label for="otherName">Other Name</label>
-                        </div-->
-                        <!--div>
-                            <input wicket:id="email" class="w3-input w3-transparent" type="email"/>
-                            <label for="email">Email</label>
-                        </div-->
-                        <!--div>
-                            <input wicket:id="telephone1" class="w3-input w3-transparent" type="text"/>
-                            <label for="telephone1">Telephone 1</label>
-                        </div-->
-                        <!--div>
-                        <input wicket:id="telephone2" class="w3-input w3-transparent" type="text"/>
-                        <label for="telephone2">Telephone 1</label>
-                        </div-->
                     </section>
                     <footer class="w3-panel w3-stretch w3-center">
                         <div>
