Delete Now works removed added Kendo and jquery libraries from the class path Signed-off-by:pembertonc <cedric.pemberton@gmail.com> Signed-off-by:pembertonc <cedric.pemberton@gmail.com>

--- a/src/main/java/com/techmine/gs/ui/panels/views/user_view/UserEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/user_view/UserEditor.html
@@ -42,6 +42,7 @@ limitations under the License.
                             <button wicket:id="save" class="w3-button  w3-mobile w3-hover-orange">Save</button>
                             <button wicket:id="cancel" class="w3-button  w3-mobile w3-hover-orange">Cancel</button>
                             <button wicket:id="new" class="w3-button  w3-mobile w3-hover-orange">New</button>
+                            <button wicket:id="delete" class="w3-button  w3-mobile w3-hover-orange">Delete</button>
                         </div>
                     </footer>
                 </div>
