--- a/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerEditor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerEditor.html
@@ -19,6 +19,9 @@ limitations under the License.
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link href="../../../../../../../../webapp/resources/css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="../../../../../../../../webapp/resources/css/w3-theme.css" rel="stylesheet" type="text/css"/>
+        <link href="../../../../../../../../webapp/resources/css/w3.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <wicket:panel>
