line 26 to <div>Owner View works</div>

--- a/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerView.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerView.html
@@ -16,14 +16,14 @@ limitations under the License.
 -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
     <head>
-       
+
         <title>TODO supply a title</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
     <body>
-    <wicket:panel>
-        <div>TODO write content</div>
+        <wicket:panel>
+            <div>Owner View works</div>
         </wicket:panel>
     </body>
 </html>
