--- a/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerView.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/ownerView/OwnerView.html
@@ -23,7 +23,14 @@ limitations under the License.
     </head>
     <body>
         <wicket:panel>
-            <div>Owner View works</div>
+            <div class="w3-container w3-row">
+                <div class="w3-third w3-mobile">
+                    <div wicket:id="editor">Editor</div>
+                </div>
+                <div class="w3-twothird w3-mobile">
+                    <div wicket:id="searcher"></div>
+                </div>
+            </div>
         </wicket:panel>
     </body>
 </html>
