--- a/src/main/java/com/techmine/gs/ui/panels/views/cylinder/Searcher.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/cylinder/Searcher.html
@@ -14,18 +14,15 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
+<html>
     <head>
         <title>TODO supply a title</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="TextFieldWFeedback.css" rel="stylesheet" type="text/css"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <wicket:panel>
-            <select wicket:id="select" class="form-control"></select>
-            <label wicket:id="caption" class="control-label">select Something</label>
-            <div wicket:id="errorMessage"></div>
-        </wicket:panel>
-    </body>
+    <wicket:panel>
+
+    </wicket:panel>
+</body>
 </html>
