--- a/src/main/java/com/techmine/gs/ui/panels/views/cylinder/CylinderView.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/cylinder/CylinderView.html
@@ -22,13 +22,16 @@ limitations under the License.
     </head>
     <body>
         <header class="w3-theme-d1 w3-stretch w3-center w3-text-light-grey ">Cylinder Manager</header>
-        <div class="w3-container w3-row">
-            <div class="w3-third w3-mobile">
-                <div wicket:id="editor">Editor</div>
+        <wicket:panel>
+            <label> Cylinder view works!</label>
+            <div class="w3-container w3-row">
+                <div class="w3-third w3-mobile">
+                    <div wicket:id="editor">Editor</div>
+                </div>
+                <div class="w3-twothird w3-mobile">
+                    <div wicket:id="searcher"></div>
+                </div>
             </div>
-            <div class="w3-twothird w3-mobile">
-                <div wicket:id="searcher"></div>
-            </div>
-        </div>
+        </wicket:panel>
     </body>
 </html>
