Added select for dropdownchoiccomponent for Gas Types

--- a/src/main/java/com/techmine/gs/ui/panels/views/cylinder/Editor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/cylinder/Editor.html
@@ -32,7 +32,7 @@ limitations under the License.
                     <div wicket:id="sectionContainer">
                         <section class="w3-container w3-padding-top-24">
                             <div wicket:id="serialNumber" >Cylinder Number</div>
-                            <div id="gasType" >gas type</div>
+                            <select wicket:id="gasType" >gas type</select>
                             <div wicket:id="size">Amount</div>
                             <!--div wicket:id="capacity">Amount units</div-->
                             <div id="owner">Owner</div>
