Added select for DropDownChoice to display GasType.  enclosed it in a div with control-group class,  added form-control to the select and form-label class to the label to get the floating label effect..

--- a/src/main/java/com/techmine/gs/ui/panels/views/cylinder/Editor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/cylinder/Editor.html
@@ -32,7 +32,10 @@ limitations under the License.
                     <div wicket:id="sectionContainer">
                         <section class="w3-container w3-padding-top-24">
                             <div wicket:id="serialNumber" >Cylinder Number</div>
-                            <select wicket:id="gasType" >gas type</select>
+                            <div class="control-group">
+                                <select class="form-control" wicket:id="gasType">gas type</select>
+                                <label class="control-label">Select Gas</label>
+                            </div>
                             <div wicket:id="size">Amount</div>
                             <!--div wicket:id="capacity">Amount units</div-->
                             <div id="owner">Owner</div>
