Added <select> tag for selecting the unit of measure for the cylinder capacity

--- a/src/main/java/com/techmine/gs/ui/panels/views/cylinder/Editor.html
+++ b/src/main/java/com/techmine/gs/ui/panels/views/cylinder/Editor.html
@@ -38,6 +38,10 @@ limitations under the License.
                             </div>
                             <div wicket:id="size">Amount</div>
                             <!--div wicket:id="capacity">Amount units</div-->
+                            <div class="control-group">
+                                <select class="form-control" wicket:id="sizeUnit">Unit</select>
+                                <label class="control-label">Unit</label>
+                            </div>
                             <div id="owner">Owner</div>
                         </section>
                     </div>
